--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 title: Yahya's homepage
 description: I share here research projects and blogs thereon. 
+avatar: https://avatars.githubusercontent.com/u/Saleh0694
 lsi: false
 safe: true
 source: [your repo's top level directory]
