adding photo: or trying to :3

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,4 @@ social-network-links:
   stackoverflow: "9943046"
   linkedin: yahyasaleh
   twitter: @yahya_saleh94
+![Hello World](/assets/images/stylized.png)
