--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yahya's homepage
 description: I share here research projects and blogs thereon (changed).
-accent_image: assets/img/stylized.png
 lsi: false
 safe: true
 source: [your repo's top level directory]
@@ -13,3 +12,6 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+author:
+  picture: /assets/img/stylized.png
+
