--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yahya's homepage
-description: I share here research projects and blogs thereon (changed).
+description: I share here research projects and blogs thereon.
 lsi: false
 safe: true
 source: [your repo's top level directory]
@@ -14,4 +14,5 @@ kramdown:
   syntax_highlighter: rouge
 author:
   picture: /assets/img/stylized.png
-
+  social:
+    twitter: yahya_saleh94
